next round of tier1 testing